Final State of the Project
Signed-off-by: Übeytullah Tarhan <tarhanubeyt@gmail.com>